k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spikes
  labels:
    app: spikes
spec:
  ports:
    - port: 8080
      name: http
  type: NodePort
  selector:
    app: spikes
